# cladokit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: cladokitConfig.cmake.in  cmake_uninstall.cmake.in
src/cladokit/: bipartition.hpp  newick.cpp  newick.hpp  newick_options.hpp  nexus.cpp  nexus.hpp  node.cpp  node.hpp  tree.cpp  tree.hpp  tree_metric.hpp  treeio.hpp  utils.cpp  utils.hpp
tests/: node_test.cpp  tree_metric_test.cpp  tree_test.cpp  utils_test.cpp
